assets/css/main.css
/* ... */
.clickableIMG:hover {
	border-radius: 100px;
	outline: var(--generic-hover);
	outline-color: var(--generic-hover);
	outline-style: solid;
}

a:hover, a:hover > p {
	transform: scaleX(0.98);
	color: var(--generic-mid-grey) !important;
	background-color: var(--generic-hover) !important;
}
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
.info a:hover,
.warning a:hover,
.error a:hover,
select:hover,
button:hover,
.button:hover,
#slider:hover {
	color: var(--generic-mid-grey) !important;
	background-color: var(--generic-hover);
	transform: scaleX(0.95);
}


input[type="checkbox"]:hover + label:before,
input[type="radio"]:hover + label:before {
	transform: scale(0.8);
	background-color: var(--generic-hover);

}
#slider {
	top: -1em;
	width: 120px;
	height: 50px;
	background: var(--input-back);
	border: solid 1px var(--input-border);
	cursor: pointer;
	border-radius: 20px;
	position: relative;
}

#slider-thumb {
	top: 4px;
	width: 40px;
	height: 40px;
	background: var(--input-color);
	border: solid 1px var(--input-border);
	left: 3px;
	transition: left 0.2s;
	border-radius: 20px;
	position: absolute;
}

#slider.on #slider-thumb {
	left: 40px;
}
#slider-thumb.dragging {
	box-shadow: 0 0 5px #333;
}

a:active,
a:active > p,
input:active, input:-webkit-autofill:active,
.button:active {
	transform: scaleX(0.9);
}



input[type="checkbox"]:active + label:before,
input[type="radio"]:active + label:before,
.clickableIMG:active {
	transform: scale(0.5);
}

#slider:active {
	transform: scale(0.9);
}


/* Make images fullscreen onclick */
#fullpage {
	display: none;
	position: fixed;
	z-index: 10004;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-size: cover;
	background-repeat: no-repeat no-repeat;
	background-position: center center;
	background-color: var(--generic-body-back);
}

/* Magic tables */
.table-row {
	display: table-row;
	padding: 10px 0;

}

.table-cell {
	display: table-cell;
	width: 25%;
	padding: 0.5em;

}


#right_form {
	display: table-cell;
}

@media screen and (max-width: 700px) {

	.table-cell {
		display: unset;
		width: 100%;
	}
	#right_form {
		display: none;
	}
}

@media print {
	#topBar {
		display:none;
		visibility: hidden;
	}
	.printmenot {
		display:none;
		visibility: hidden;
	}
}

.graph_scheme {
	color: var(--label-color);
	display: block;
	font-size: 0.1em;
	font-weight: 700;
	margin: 0 0 1em 0;
}

/* not-selectable class and all images */
.not-selectable,
img {
	user-select: none;
}

.weather_scheme {
	margin: 0.5em !important;
	padding-left: 0 !important;
	padding-right: 0 !important;
	padding-top: 0.5em !important;
}

.weather_temperature {
	opacity: 0;
	display: none;
	position: absolute;
	padding-left: 4em;
	top: -0.75em;
}

.color_scheme, .weather_scheme, .weather_temperature {

	font-size: 0.8em !important;
	font-weight: 700 !important;
}
@media screen and (max-width: 1680px) {
	#color_scheme {
		top: 5px;
	}
}
@media screen and (max-width: 736px) {
	#color_scheme {
		top: 0;
	}
}

.language_label_div {
	-moz-transition: transform 0.5s ease, opacity 0.5s ease;
	-webkit-transition: transform 0.5s ease, opacity 0.5s ease;
	-ms-transition: transform 0.5s ease, opacity 0.5s ease;
	transition: transform 0.5s ease, opacity 0.5s ease;
}

.language_container {
	display: flex;
	padding-left: -1em;
	font-size: 14pt;
	padding-right: 0;
}

.language_select_container {
	position: relative;
	width: 100%;
	top: -120px;
	left: 130px;
	height: 0;
	margin-left: 3em;
}

	@media screen and (max-width: 1680px) {
		.language_select_container {
			top: -112px;
		margin-left: 1em;
	}
}

@media screen and (max-width: 500px) {
	.language_select_container {
		width: 50%;
		top: -100px;
		margin-left: 0;
	}
}

	@media screen and (max-width: 450px) {
		.language_select_container {
		width: 50%;
		top: -100px;
		margin-left: -1em;
	}
}

.language_label {
	position: relative;
	pointer-events: none;
	top: 45px;
	left: 15px;
	z-index: 1010;
}

.language_select_container:hover .language_label_div {
	opacity: 0;
	transform: scaleX(0.98);
}

.language_select {
	position: relative;
	/*
	top: -80px;
	left: 80px;
	*/
	min-width: 100px;
	max-width: 200px;
	padding-left: 10px;
	color: rgba(0, 0, 0, 0); !important;
}

.language_label:active {

	border-style: inset !important;
	border-color: black !important;

	outline-style: outset !important;
	outline-color: white !important;
}


.color_scheme_container {
	display: flex;
	padding-left: -1em;
	font-size: 14pt;
	padding-right: 0;
}

.color_scheme {
	position: relative;
	left: 2.5em;
}

.color_scheme_select {
	top: 10px;
	position: relative;
	min-width: 100px;
	left: -1.4em;
	padding-left: 10px;
}

/* Safari only */
@media not all and (min-resolution:.001dpcm) {
	@media {
		.color_scheme {
			left: 2.8em;
		}
		.color_scheme_select {
			left: -2.2em;
			min-width: 80px;
		}
	}
}


/*   Weather stuff   */


#skyandweather-container {
	opacity: 0;
	display: none;
}


#sky {
	position: fixed;
	display: none;
	width: 100%;
	height: 75%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-image:linear-gradient(200deg, #000000 5%, rgba(0,0,0,0) 40%);
	pointer-events: none;

	/*clip-path: polygon(0 0, 100% 0, 100% 75%, 0 75%, 0 calc(100% - 50px));*/

	padding: unset;
	font-size: 14pt;
}
#sun {
	position: fixed;
	display: none;
	width: 5em;
	height: 5em;
	bottom: -100%;
	right: -2.5em;
	border-radius: 50%;
	pointer-events: none;
	top: unset;
	left: unset;
	padding: unset;
	opacity: 1;

}



/* moon */




#moon {
	position: fixed;
	border-radius: 100%;
	width: 5em;
	height: 5em;
	right: 2.5em;
	top: -100%;
	display: none;
	overflow: hidden;
	align-items: center;
	margin-bottom: 10em;
	pointer-events: none;
	left: unset;
	padding: unset;
	opacity: 1;
	z-index: -1;
}

.hemisphere {
	width: 50%;
	height: 100%;
}

.light {
	background-color: #F4F6F0;
}

.dark {
	background-color: #212121;
}
/* ... */

